crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__joined_string_recovery_8.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"'a\\nb${a: #json}\\n'\"#)"
---
Node {
    node: JoinedString(
        JoinedString {
            is_long_string: false,
            values: [
                Node {
                    node: StringLit(
                        StringLit {
                            is_long_string: false,
                            raw_value: "a\\nb",
                            value: "a\nb",
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 1,
                },
                Node {
                    node: FormattedValue(
                        FormattedValue {
                            is_long_string: false,
                            value: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "a",
                                                filename: "",
                                                line: 1,
                                                column: 7,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 7,
                                end_line: 1,
                                end_column: 8,
                            },
                            format_spec: Some(
                                "#json",
                            ),
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 7,
                    end_line: 1,
                    end_column: 15,
                },
                Node {
                    node: StringLit(
                        StringLit {
                            is_long_string: false,
                            raw_value: "\\n",
                            value: "\n",
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 1,
                },
            ],
            raw_value: "'a\\nb${a: #json}\\n'",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 19,
}
