crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__lambda_recovery_1.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"lambda {\"#)"
---
Node {
    node: Lambda(
        LambdaExpr {
            args: None,
            body: [],
            return_ty: None,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 8,
}
