crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__lambda_recovery_3.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"{lambda}\"#)"
---
Node {
    node: Config(
        ConfigExpr {
            items: [
                Node {
                    node: ConfigEntry {
                        key: Some(
                            Node {
                                node: Lambda(
                                    LambdaExpr {
                                        args: Some(
                                            Node {
                                                node: Arguments {
                                                    args: [
                                                        Node {
                                                            node: Identifier {
                                                                names: [
                                                                    Node {
                                                                        node: "",
                                                                        filename: "",
                                                                        line: 1,
                                                                        column: 7,
                                                                        end_line: 1,
                                                                        end_column: 7,
                                                                    },
                                                                ],
                                                                pkgpath: "",
                                                                ctx: Load,
                                                            },
                                                            filename: "",
                                                            line: 1,
                                                            column: 7,
                                                            end_line: 1,
                                                            end_column: 7,
                                                        },
                                                    ],
                                                    defaults: [
                                                        None,
                                                    ],
                                                    ty_list: [
                                                        None,
                                                    ],
                                                },
                                                filename: "",
                                                line: 1,
                                                column: 7,
                                                end_line: 1,
                                                end_column: 8,
                                            },
                                        ),
                                        body: [],
                                        return_ty: None,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 8,
                            },
                        ),
                        value: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 8,
                            end_line: 1,
                            end_column: 8,
                        },
                        operation: Override,
                        is_shorthand: false,
                    },
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 8,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 8,
}
